# cicada

./: .service  LICENSE  README.md  main.py  pyproject.toml  serve.py  service_template.service  setup.py  test.py
Cicada/: Cicada.py  Inputs.py  Media.py  Pico.py  RPi.py  __init__.py  simple.py
examples/: blink.py  button.py  mqtt.py  simon_says.py
