[project]
name = "cicada"
version = "0.3.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
    "rpi-gpio>=0.7.1",
    "mfrc522>=0.0.7",
    "paho-mqtt>=2.1.0",
]
fallback = [
    "fake-rpi>=0.7.1",
    "paho-mqtt>=2.1.0",
]
lite = [
    "paho-mqtt>=2.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
